global error handler fix

--- a/public/html/NotFound.html
+++ b/public/html/NotFound.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Welcome to My Application</title>
+    <title>Page Not Found</title>
     <style>
         /* Global Reset */
         * {
@@ -16,7 +16,7 @@
 
         body {
             font-family: 'Roboto', Arial, sans-serif;
-            background: linear-gradient(135deg, #4caf50, #81c784);
+            background: linear-gradient(135deg, #f44336, #e57373);
             color: #fff;
             display: flex;
             justify-content: center;
